--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. AAAI (Oral)</font></i></b>, Feb. 2024
 			<br>
-			[<a href=''><b>Paper</b></a>]
+			[<a href='https://arxiv.org/pdf/2402.00341.pdf'><b>Paper</b></a>]
 			</td>
 		</tr>
 
@@ -139,7 +139,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. AAAI</font></i></b>, Feb. 2024
 			<br>
-			[<a href=''><b>Paper</b></a>]
+			[<a href='https://drive.google.com/file/d/1TyHfOJzNw0GhwT8WqYx6sT0JkAJTsq9a/view?usp=sharing'><b>Paper</b></a>]
 			</td>
 		</tr>
 
@@ -152,7 +152,7 @@ body {
 			<br>
 			<b><i><font color="#770043">ACM Trans. on Graphics (Proc. ACM SIGGRAPH Asia)</font></i></b>, Dec. 2023
 			<br>
-			[<a href=''><b>Paper</b></a>]
+			[<a href='https://zhengdong.site/files/papers/sailor.pdf'><b>Paper</b></a>|<a href='https://zhengdong.site/projects/SAILOR/'><b>Project</b></a>]
 			</td>
 		</tr>
 
@@ -177,7 +177,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE ICCV</font></i></b>, Oct. 2023
 			<br>
-			[<a href='https://openaccess.thecvf.com/content/ICCV2023/papers/Sun_Adaptive_Illumination_Mapping_for_Shadow_Detection_in_Raw_Images_ICCV_2023_paper.pdf'><b>Paper</b></a>]
+			[<a href='https://openaccess.thecvf.com/content/ICCV2023/papers/Sun_Adaptive_Illumination_Mapping_for_Shadow_Detection_in_Raw_Images_ICCV_2023_paper.pdf'><b>Paper</b></a>|<a href=''><b>Project</b></a>]
 			</td>
 		</tr>
 
@@ -189,7 +189,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE ICCV</font></i></b>, Oct. 2023
 			<br>
-			[<a href='https://openaccess.thecvf.com/content/ICCV2023/papers/Xu_Learning_Image_Harmonization_in_the_Linear_Color_Space_ICCV_2023_paper.pdf'><b>Paper</b></a>]
+			[<a href='https://openaccess.thecvf.com/content/ICCV2023/papers/Xu_Learning_Image_Harmonization_in_the_Linear_Color_Space_ICCV_2023_paper.pdf'><b>Paper</b></a>|<a href=''><b>Project</b></a>]
 			</td>
 		</tr>
 
@@ -201,7 +201,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE ICCV</font></i></b>, Oct. 2023
 			<br>
-			[<a href='https://openaccess.thecvf.com/content/ICCV2023/papers/Liu_Referring_Image_Segmentation_Using_Text_Supervision_ICCV_2023_paper.pdf'><b>Paper</b></a>]
+			[<a href='https://openaccess.thecvf.com/content/ICCV2023/papers/Liu_Referring_Image_Segmentation_Using_Text_Supervision_ICCV_2023_paper.pdf'><b>Paper</b></a>|<a href='https://github.com/fawnliu/TRIS'><b>Project</b></a>]
 			</td>
 		</tr>
 
@@ -213,7 +213,7 @@ body {
 			<br>
 			<b><i><font color="#770043">International Journal of Computer Vision (IJCV)</font></i></b>, 2023
 			<br>
-			[<a href='https://link.springer.com/article/10.1007/s11263-023-01838-2'><b>Paper</b></a>]
+			[<a href='https://link.springer.com/article/10.1007/s11263-023-01838-2'><b>Paper</b></a>|<a href='https://mhaiyang.github.io/IJCV2023-OPNet/index.html'><b>Code</b></a>]
 			</td>
 		</tr>
 
@@ -225,7 +225,7 @@ body {
 			<br>
 			<b><i><font color="#770043">IEEE Trans. on Image Processing (TIP)</font></i></b>, 2023
 			<br>
-			[<a href=''><b>Paper</b></a>]
+			[<a href='https://arxiv.org/pdf/2301.03182.pdf'><b>Paper</b></a>]
 			</td>
 		</tr>
 
@@ -237,7 +237,7 @@ body {
 			<br>
 			<b><i><font color="#770043">IEEE Trans. on Image Processing (TIP)</font></i></b>, 2023
 			<br>
-			[<a href='https://arxiv.org/pdf/2208.14241.pdf'><b>Paper</b></a>|<a href=''><b>Code</b></a>]
+			[<a href='https://arxiv.org/pdf/2208.14241.pdf'><b>Paper</b></a>|<a href='https://github.com/wangsen99/FDLNet'><b>Code</b></a>]
 			</td>
 		</tr>
 
@@ -262,7 +262,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. NeurIPS (Spotlight)</font></i></b>, Nov. 2022
 			<br>
-			[<a href='https://arxiv.org/pdf/2112.02082.pdf'><b>Paper</b></a>|<a href=''><b>Code</b></a>]
+			[<a href='https://arxiv.org/pdf/2112.02082.pdf'><b>Paper</b></a>|<a href='https://sites.google.com/view/twoscale'><b>Project</b></a>]
 			</td>
 		</tr>
 
