--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE ICCV</font></i></b>, Oct. 2023
 			<br>
-			[<a href='https://openaccess.thecvf.com/content/ICCV2023/papers/Wang_Lighting_up_NeRF_via_Unsupervised_Decomposition_and_Enhancement_ICCV_2023_paper.pdf'><b>Paper</b></a>]
+			[<a href='https://openaccess.thecvf.com/content/ICCV2023/papers/Wang_Lighting_up_NeRF_via_Unsupervised_Decomposition_and_Enhancement_ICCV_2023_paper.pdf'><b>Paper</b></a>|<a href='https://github.com/onpix/LLNeRF'><b>Project</b></a>]
 			</td>
 		</tr>
 
