--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body {
 			<td>
 			<font size="3">Unsupervised Salient Instance Detection
 			<br>
-			<i>  Xin Tian, <b>Ke Xu</b>, Rynson Lau</i>
+			<i>  Xin Tian, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Rynson Lau</i>
 			<br>
 			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2024
 			<br>
