--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@ body {
 	<br>	
 	
 	
-	<h2>Publications In 2020s&nbsp
-	<a href="publications.html"><strong>[Previous]</strong></a>
-	<a href="https://scholar.google.com/citations?hl=en&user=2meBhbQAAAAJ"><strong>[Google Scholar]</strong></a></h2>
+	<h2>Selected Publications&nbsp
+	<a href="https://scholar.google.com/citations?hl=en&user=2meBhbQAAAAJ"><strong>[Google Scholar]</strong></a>
+<a href="https://dblp.org/pid/181/2626-10"><strong>[DBLP]</strong></a>
+<a href="https://orcid.org/0000-0001-5855-3810"><strong>[ORCID]</strong></a></h2>
 	<table cellspacing="10">
 	<hr>
 	<tbody>
@@ -79,7 +80,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2024
 			<br>
-			[<a href=''><b>Paper</b></a>]
+			[<a href='https://openaccess.thecvf.com/content/CVPR2024/papers/Tian_Unsupervised_Salient_Instance_Detection_CVPR_2024_paper.pdf'><b>Paper</b></a>]
 			</td>
 		</tr>
 
@@ -91,11 +92,11 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2024
 			<br>
-			[<a href=''><b>Paper</b></a>]
+			[<a href='https://openaccess.thecvf.com/content/CVPR2024/papers/Li_Color_Shift_Estimation-and-Correction_for_Image_Enhancement_CVPR_2024_paper.pdf'><b>Paper</b></a>|<a href='https://github.com/yiyulics/CSEC'><b>Project</b></a>]
 			</td>
 		</tr>
 
-		<tr>
+		<tr> 
 			<td>
 			<font size="3">Effective Video Mirror Detection with Inconsistent Motion Cues
 			<br>
@@ -103,7 +104,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2024
 			<br>
-			[<a href=''><b>Paper</b></a>]
+			[<a href='https://openaccess.thecvf.com/content/CVPR2024/papers/Warren_Effective_Video_Mirror_Detection_with_Inconsistent_Motion_Cues_CVPR_2024_paper.pdf'><b>Paper</b></a>]
 			</td>
 		</tr>
 
@@ -127,7 +128,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. AAAI</font></i></b>, Feb. 2024
 			<br>
-			[<a href=''><b>Paper</b></a>]
+			[<a href='https://ojs.aaai.org/index.php/AAAI/article/view/28148'><b>Paper</b></a>]
 			</td>
 		</tr>
 
@@ -274,7 +275,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. BMVC (Oral)</font></i></b>, Nov. 2022
 			<br>
-			[<a href=''><b>Paper</b></a>|<a href=''><b>Code</b></a>]
+			[<a href='https://bmvc2022.mpi-inf.mpg.de/0592.pdf'><b>Paper</b></a>|<a href=''><b>Code</b></a>]
 			</td>
 		</tr>
 
@@ -447,6 +448,54 @@ body {
 			[<a href='https://openaccess.thecvf.com/content_CVPR_2020/papers/Xu_Learning_to_Restore_Low-Light_Images_via_Decomposition-and-Enhancement_CVPR_2020_paper.pdf'><b>Paper</b></a>|<a href='https://drive.google.com/drive/folders/1f9rFBpiGadz98_SABXmPLIErXnOujz5X?usp=sharing'><b>Code</b></a>|<a href='https://drive.google.com/drive/folders/1-psXDjeW4FiRdLjc9idABsxGPo1Kn1jR?usp=sharing'><b>Dataset</b></a>]
 			</td>			
 		</tr>		
+
+<tr>
+			<td>
+			<font size="3">Where is My Mirror?
+			<br>
+			<i>Xin Yang, Haiyang Mei, <b>Ke Xu</b>, Xiaopeng Wei, Baocai Yin, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. IEEE ICCV</font></i></b>, Oct. 2019
+			<br>
+			[<a href='https://openaccess.thecvf.com/content_ICCV_2019/papers/Yang_Where_Is_My_Mirror_ICCV_2019_paper.pdf'><b>Paper</b></a>|<a href='https://mhaiyang.github.io/ICCV2019_MirrorNet/index.html'><b>Project</b></a>]
+			</td>			
+		</tr>	
+
+		<tr>
+			<td>
+			<font size="3">Spatial Attentive Single-Image Deraining with a High Quality Real Rain Dataset
+			<br>
+			<i>Tianyu Wang, Xin Yang, <b>Ke Xu</b>, Shaozhe Chen, Qiang Zhang, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2019
+			<br>
+			[<a href='https://openaccess.thecvf.com/content_CVPR_2019/papers/Wang_Spatial_Attentive_Single-Image_Deraining_With_a_High_Quality_Real_Rain_CVPR_2019_paper.pdf'><b>Paper</b></a>|<a href='https://github.com/stevewongv/SPANet'><b>Code</b></a>|<a href='https://mycuhk-my.sharepoint.com/personal/1155152065_link_cuhk_edu_hk/_layouts/15/onedrive.aspx?id=%2Fpersonal%2F1155152065%5Flink%5Fcuhk%5Fedu%5Fhk%2FDocuments%2Fdataset%2Freal%5Fworld%5Frain%5Fdataset%5FCVPR19'><b>Dataset</b></a>]
+			</td>
+		</tr>	
+
+		<tr>
+			<td>
+			<font size="3">Active Matting
+			<br>
+			<i>Xin Yang*, <b>Ke Xu</b>*, Shaozhe Chen, Shengfeng He, Baocai Yin, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. NeurIPS</font></i></b>, Dec. 2018
+			<br>
+			[<a href='https://papers.nips.cc/paper/2018/file/653ac11ca60b3e021a8c609c7198acfc-Paper.pdf'><b>Paper</b></a>|<a href=''><b>Code</b></a>|<a href='https://drive.google.com/drive/folders/1xcWwSHVR7li8a7s8kn3GpgBRhLuZ66wl?usp=sharing'><b>Dataset</b></a>]
+			</td>			
+		</tr>	
+
+		<tr>
+			<td>
+			<font size="3">Image Correction via Deep Reciprocating HDR Transformation
+			<br>
+			<i>Xin Yang*, <b>Ke Xu</b>*, Yibing Song, Qiang Zhang, Xiaopeng Wei, Rynson Lau</i> (* joint first authors)
+			<br>
+			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2018
+			<br>
+			[<a href='https://openaccess.thecvf.com/content_cvpr_2018/papers/Yang_Image_Correction_via_CVPR_2018_paper.pdf'><b>Paper</b></a>|<a href='https://drive.google.com/drive/folders/1PqZPgBxGw14tukPvtgnPl7qn0Zu6KhTU?usp=sharing'><b>Code</b></a>|<a href='https://drive.google.com/drive/folders/1lNxf_3LW5b1w5uAvFVLJE5By01OmXRXI?usp=sharing'><b>Dataset</b></a>]
+			</td>			
+		</tr>	
 
 	</tbody>
 	</table>
