--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@ body {
   position: relative;
   margin: 3em auto 2em auto;
   width: 1080px;
-  font-family: Times New Roman, Lato, Verdana, Helvetica, sans-serif;
+  font-family: Produkt, Times New Roman, Helvetica, sans-serif;
   font-size: 14px;
-  background: #fdfdfd;
+  background: #ffffff;
 }
 </style>
 
@@ -55,11 +55,8 @@ body {
 	
 	<h2>Service</h2>
 	<hr>
-	<p><font size="3">Program Committee Member: CVPR, ICCV, ECCV, NeurIPS, ICLR, ICML.</font></p>
-	<p><font size="3">Journal Reviewer: IJCV, TPAMI, TIP.</font></p>
-	<p><font size="3">Best Student Paper Award Runner Up: BMVC 2020.</font></p>
-	<p><font size="3">Top Reviewer: NeurIPS 2019.</font></p>
-	<p><font size="3">Travel Award: NeurIPS 2018.</font></p>
+	<p><font size="3">Program Committee Member: CVPR, ICCV, ECCV, NeurIPS, ICLR, ICML</font></p>
+	<p><font size="3">Journal Reviewer: IJCV, TPAMI, TIP</font></p>
 	<br>	
 	
 	
