--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
 <title>kexu</title>
 
 <style media="screen" type="text/css">
+    table {
+      counter-reset: rowNumber;
+    }
+
+    .numbertable tr::before {
+      display: table-cell;
+      vertical-align: middle;
+      counter-increment: rowNumber;
+      content: counter(rowNumber) ".";
+      padding-right: 0.3em;
+      text-align: left;
+    }
+
 body
 {
   border: 0pt none;
@@ -49,13 +62,15 @@ body {
 	
 	<h2>Biography</h2>
 	<hr/>
-	<p><font size="3">Ke XU currently works at City University of Hong Kong. He has obtained the dual Ph.D. degrees from Dalian University of Technology and City University of Hong Kong in 2021. He aims to design effective visual perceptual models, to align the camera system of AI agents with the capacity of the human visual system in the wild.</font></p>	
+	<p><font size="3">Ke XU currently works at City University of Hong Kong. He has obtained the dual Ph.D. degrees from Dalian University of Technology and City University of Hong Kong in 2021. His research interests are developing AI techniques to solve challenging computer vision and interactive graphics problems, focusing on <b>scene processing and 3D reconstruction</b> that can enhance AI agents' capacities for augmenting and interacting with humans. While the scene processing enhances the perception quality (e.g., under harsh environmental conditions) and extracts effective scene knowledge, the 3D reconstruction provides an accurate 3D proxy for human-AI interactions. His research papers appear in top venues featuring computer vision, graphics, and machine learning (e.g., CVPR/ICCV/ECCV/NeurIPS/SIGGRAPH Asia).
+
+	</font></p>	
 	<br>
 	
 	
 	<h2>Service</h2>
 	<hr>
-	<p><font size="3">Program Committee Member: CVPR, ICCV, ECCV, NeurIPS, ICLR, ICML</font></p>
+	<p><font size="3">Program Committee Member: CVPR, ICCV, ECCV, NeurIPS, ICLR, ICML, AAAI</font></p>
 	<p><font size="3">Journal Reviewer: IJCV, TPAMI, TIP</font></p>
 	<br>	
 	
@@ -64,13 +79,26 @@ body {
 	<a href="https://scholar.google.com/citations?hl=en&user=2meBhbQAAAAJ"><strong>[Google Scholar]</strong></a>
 <a href="https://dblp.org/pid/181/2626-10"><strong>[DBLP]</strong></a>
 <a href="https://orcid.org/0000-0001-5855-3810"><strong>[ORCID]</strong></a></h2>
-	<table cellspacing="10">
+	
+	<table class="numbertable" cellspacing="10">
 	<hr>
 	<tbody>
 
 
 		<tr>
-			<td>
+      <td>
+			<font size="3">Gaussian Surfel Splatting for Live Human Performance Capture
+			<br>
+			<i>  Zheng Dong, <b>Ke Xu</b>, Yaoan Gao, Hujun Bao, Weiwei Xu, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">ACM Trans. on Graphics (Proc. ACM SIGGRAPH Asia, conditionally accepted)</font></i></b>, Dec. 2024
+			<br>
+			[<a href=''><b>Paper</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+      <td>
 			<font size="3">Unsupervised Salient Instance Detection
 			<br>
 			<i>  Xin Tian, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Rynson Lau</i>
@@ -80,6 +108,7 @@ body {
 			[<a href='https://openaccess.thecvf.com/content/CVPR2024/papers/Tian_Unsupervised_Salient_Instance_Detection_CVPR_2024_paper.pdf'><b>Paper</b></a>]
 			</td>
 		</tr>
+
 
 		<tr>
 			<td>
