--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ body {
 			<br>
 			<i>Xin Tian, <b>Ke Xu</b>, Xin Yang, Baocai Yin, Rynson Lau</i>
 			<br>
-			<b><i><font color="#770043">Proc. BMVC (Oral)</font></i></b>, Sept. 2020
+			<b><i><font color="#770043">Proc. BMVC (Best Student Paper Runner-Up)</font></i></b>, Sept. 2020
 			<br>
 			[<a href='https://arxiv.org/pdf/2009.13898.pdf'><b>Paper</b></a>|<a href=''><b>Code</b></a>]
 			</td>			
