--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2024
 			<br>
-			[<a href='https://openaccess.thecvf.com/content/CVPR2024/papers/Warren_Effective_Video_Mirror_Detection_with_Inconsistent_Motion_Cues_CVPR_2024_paper.pdf'><b>Paper</b></a>]
+			[<a href='https://openaccess.thecvf.com/content/CVPR2024/papers/Warren_Effective_Video_Mirror_Detection_with_Inconsistent_Motion_Cues_CVPR_2024_paper.pdf'><b>Paper</b></a>|<a href='https://github.com/AlexAnthonyWarren1/MG-VMD'><b>Project</b></a>]
 			</td>
 		</tr>
-
+		
 		<tr>
 			<td>
 			<font size="3">Recasting Regional Lighting for Shadow Removal
@@ -154,7 +154,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. AAAI</font></i></b>, Feb. 2024
 			<br>
-			[<a href='https://ojs.aaai.org/index.php/AAAI/article/view/28148'><b>Paper</b></a>]
+			[<a href='https://ojs.aaai.org/index.php/AAAI/article/view/28148'><b>Paper</b></a>|<a href='https://github.com/fawnliu/VGSD'><b>Code</b></a>]
 			</td>
 		</tr>
 
