--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body {
 	<td align="center">
 			<td align="center"><h2>Ke XU</h2>
 			<p><font size=+1>&#35768;  &#21487;</font></p>
-			<p><font size=+1>Postdoctoral Researcher </font></p>
+			<p><font size=+1>Research Fellow </font></p>
 			<p><font size=+1>City University of Hong Kong </font></p>						
 			<p>Email: kkangwing at gmail dot com<br></p>
 			</td>			
