--- a/index.html
+++ b/index.html
@@ -98,6 +98,18 @@ body {
 		</tr>
 
 		<tr>
+			<td>
+			<font size="3">GhostingNet: a Novel Approach for Glass Surface Detection with Ghosting Cues
+			<br>
+			<i>Tao Yan, Jiahui Gao, <b>Ke Xu</b>, Xiangjie Zhu, Hao Huang, Helong Li, Benjamin Wah, Rynson W.H. Lau</i>
+			<br>
+			<b><i><font color="#770043">IEEE Trans. on Pattern Analysis and Machine Intelligence (TPAMI)</font></i></b>, 2024
+			<br>
+			[<a href=''><b>Paper</b></a>|<a href=''><b>Code</b></a>]
+			</td>
+		</tr>
+
+		<tr>
       <td>
 			<font size="3">Unsupervised Salient Instance Detection
 			<br>
