--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ body {
 			<td>
 			<font size="3">GhostingNet: a Novel Approach for Glass Surface Detection with Ghosting Cues
 			<br>
-			<i>Tao Yan, Jiahui Gao, <b>Ke Xu</b>, Xiangjie Zhu, Hao Huang, Helong Li, Benjamin Wah, Rynson W.H. Lau</i>
+			<i>Tao Yan, Jiahui Gao, <b>Ke Xu</b>, Xiangjie Zhu, Hao Huang, Helong Li, Benjamin Wah, Rynson Lau</i>
 			<br>
 			<b><i><font color="#770043">IEEE Trans. on Pattern Analysis and Machine Intelligence (TPAMI)</font></i></b>, 2024
 			<br>
