--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ body {
 			<br>
 			<i>  Zheng Dong, <b>Ke Xu</b>, Yaoan Gao, Hujun Bao, Weiwei Xu, Rynson Lau</i>
 			<br>
-			<b><i><font color="#770043">ACM Trans. on Graphics (Proc. ACM SIGGRAPH Asia, conditionally accepted)</font></i></b>, Dec. 2024
+			<b><i><font color="#770043">ACM Trans. on Graphics (Proc. ACM SIGGRAPH Asia)</font></i></b>, Dec. 2024
 			<br>
 			[<a href=''><b>Paper</b></a>]
 			</td>
