--- a/index.html
+++ b/index.html
@@ -85,6 +85,19 @@ body {
 	<tbody>
 
 
+
+		<tr>
+      <td>
+			<font size="3">LuSh-NeRF: Lighting up and Sharpening NeRFs for Low-light Scenes
+			<br>
+			<i>  Zefan Qu, <b>Ke Xu</b>, Gerhard Hancke, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. NeurIPS</font></i></b>, Dec. 2024
+			<br>
+			[<a href=''><b>Paper</b></a>]
+			</td>
+		</tr>
+
 		<tr>
       <td>
 			<font size="3">Gaussian Surfel Splatting for Live Human Performance Capture
