--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@ body {
 	<tbody>
 
 
-
 		<tr>
       <td>
 			<font size="3">LuSh-NeRF: Lighting up and Sharpening NeRFs for Low-light Scenes
@@ -94,7 +93,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. NeurIPS</font></i></b>, Dec. 2024
 			<br>
-			[<a href=''><b>Paper</b></a>]
+			[<a href=''><b>Paper</b></a>|<a href=''><b>Code</b></a>]
 			</td>
 		</tr>
 
@@ -106,7 +105,7 @@ body {
 			<br>
 			<b><i><font color="#770043">ACM Trans. on Graphics (Proc. ACM SIGGRAPH Asia)</font></i></b>, Dec. 2024
 			<br>
-			[<a href=''><b>Paper</b></a>]
+			[<a href='https://drive.google.com/file/d/1PGigrWCZ0NkxPmBZ9CgUp6ZWgYe71Dhz/view?usp=sharing'><b>Paper</b></a>|<a href=''><b>Code</b></a>|<a href='https://drive.google.com/file/d/1ZN4oAHqdKDCjyrJUtpQ05bj_dgR-Gd0a/view?usp=sharing'><b>Video</b></a>]
 			</td>
 		</tr>
 
@@ -118,7 +117,7 @@ body {
 			<br>
 			<b><i><font color="#770043">IEEE Trans. on Pattern Analysis and Machine Intelligence (TPAMI)</font></i></b>, 2024
 			<br>
-			[<a href=''><b>Paper</b></a>|<a href=''><b>Code</b></a>]
+			[<a href=''><b>Paper</b></a>|<a href='https://github.com/YT3DVision/GhostingNet'><b>Code</b></a>]
 			</td>
 		</tr>
 
