--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body {
 	
 	<h2>Biography</h2>
 	<hr/>
-	<p><font size="3">Ke XU currently works at City University of Hong Kong. He has obtained the dual Ph.D. degrees from Dalian University of Technology and City University of Hong Kong in 2021. His research interests are developing AI techniques to solve challenging computer vision and interactive graphics problems, focusing on <b>scene processing and 3D reconstruction</b> that can enhance AI agents' capacities for augmenting and interacting with humans. While the scene processing enhances the perception quality (e.g., under harsh environmental conditions) and extracts effective scene information, the 3D reconstruction provides an accurate 3D proxy for human-AI interactions. His research papers appear in top venues featuring computer vision, graphics, and machine learning (e.g., CVPR/ICCV/ECCV/NeurIPS/SIGGRAPH Asia).
+	<p><font size="3">Ke XU currently works at City University of Hong Kong. He has obtained the dual Ph.D. degrees from Dalian University of Technology and City University of Hong Kong in 2021. His research interests are developing AI techniques to solve challenging computer vision and interactive graphics problems, focusing on <b>scene processing and 3D reconstruction</b> that can enhance AI agents' capacities for augmenting and interacting with humans. While the scene processing enhances the perception quality (e.g., under harsh environmental conditions) and extracts effective scene information, the 3D reconstruction provides an accurate 3D proxy for human-AI interactions. His research papers appear in top venues featuring computer vision, graphics, and machine learning (e.g., CVPR/ICCV/SIGGRAPH Asia/NeurIPS).
 
 	</font></p>	
 	<br>
@@ -71,7 +71,7 @@ body {
 	<h2>Service</h2>
 	<hr>
 	<p><font size="3">Program Committee Member: CVPR, ICCV, ECCV, NeurIPS, ICLR, ICML, AAAI</font></p>
-	<p><font size="3">Journal Reviewer: IJCV, TPAMI, TIP</font></p>
+	<p><font size="3">Journal Reviewer: IJCV, TPAMI, TIP, CGF</font></p>
 	<br>	
 	
 	
