--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@ body {
 	
 	<h2>Biography</h2>
 	<hr/>
-	<p><font size="3">Ke XU currently works at City University of Hong Kong. He has obtained the dual Ph.D. degrees from Dalian University of Technology and City University of Hong Kong in 2021. His research interests are developing AI techniques to solve challenging computer vision and interactive graphics problems, focusing on <b>scene processing and 3D reconstruction</b> that can enhance AI agents' capacities for augmenting and interacting with humans. While the scene processing enhances the perception quality (e.g., under harsh environmental conditions) and extracts effective scene information, the 3D reconstruction provides an accurate 3D proxy for human-AI interactions. His research papers appear in top venues featuring computer vision, graphics, and machine learning (e.g., CVPR/ICCV/SIGGRAPH Asia/NeurIPS).
+	<p><font size="3">Ke XU currently works at the City University of Hong Kong. He obtained a dual PhD in Computer Science from Dalian University of Technology and City University of Hong Kong in 2021. His research interests include developing AI techniques for challenging computer vision and interactive graphics problems. He focuses on advancing <b>scene processing and 3D reconstruction</b> under harsh conditions to enhance AI agents' capacities for augmenting and interacting with humans. His research papers appear in premier venues featuring computer vision, graphics, and machine learning (e.g., CVPR/ICCV/SIGGRAPH Asia/NeurIPS).
+
 
 	</font></p>	
 	<br>
@@ -89,11 +90,11 @@ body {
       <td>
 			<font size="3">LuSh-NeRF: Lighting up and Sharpening NeRFs for Low-light Scenes
 			<br>
-			<i>  Zefan Qu, <b>Ke Xu</b>, Gerhard Hancke, Rynson Lau</i>
+			<i>  Zefan Qu, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Gerhard Hancke, Rynson Lau</i>
 			<br>
 			<b><i><font color="#770043">Proc. NeurIPS</font></i></b>, Dec. 2024
 			<br>
-			[<a href=''><b>Paper</b></a>|<a href=''><b>Code</b></a>]
+			[<a href='https://arxiv.org/pdf/2411.06757'><b>Paper</b></a>|<a href='https://github.com/quzefan/LuSh-NeRF'><b>Code</b></a>]
 			</td>
 		</tr>
 
@@ -105,7 +106,7 @@ body {
 			<br>
 			<b><i><font color="#770043">ACM Trans. on Graphics (Proc. ACM SIGGRAPH Asia)</font></i></b>, Dec. 2024
 			<br>
-			[<a href='https://drive.google.com/file/d/1PGigrWCZ0NkxPmBZ9CgUp6ZWgYe71Dhz/view?usp=sharing'><b>Paper</b></a>|<a href=''><b>Code</b></a>|<a href='https://drive.google.com/file/d/1ZN4oAHqdKDCjyrJUtpQ05bj_dgR-Gd0a/view?usp=sharing'><b>Video</b></a>]
+			[<a href='https://drive.google.com/file/d/1PGigrWCZ0NkxPmBZ9CgUp6ZWgYe71Dhz/view?usp=sharing'><b>Paper</b></a>|<a href=''><b>Code</b></a>|<a href='https://www.youtube.com/watch?v=M4fD3GgjZTI'><b>Video1</b></a>|<a href='https://www.youtube.com/watch?v=MGIlBT_JZNk'><b>Video2</b></a>]
 			</td>
 		</tr>
 
