--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body {
 	
 	<h2>Biography</h2>
 	<hr/>
-	<p><font size="3">Ke XU currently works at the City University of Hong Kong. He obtained a dual PhD in Computer Science from Dalian University of Technology and City University of Hong Kong in 2021. His research interest lies at the intersection of computer vision, computer graphics, and machine learning, where he explores advanced AI techniques to facilitate computers to see, understand, and create scene content in daily/professional activities. His work addresses challenges of capture and learning, including imaging and building effective representations under harsh conditions (e.g., low and/or high illumination, rain, and sparse capture rigs) at varying time/scene/data scales. His research papers appear in premier venues featuring computer vision, graphics, and machine learning (e.g., CVPR/ICCV/SIGGRAPH Asia/NeurIPS).
+	<p><font size="3">Ke XU currently works at the City University of Hong Kong. He obtained a dual PhD in Computer Science from Dalian University of Technology and City University of Hong Kong in 2021. His research interest lies at the intersection of computer vision, computer graphics, and machine learning, where he explores advanced AI techniques to facilitate computers to see, understand, and recreate the richness of content in everyday and professional activities. His work addresses challenges of capture and learning, including imaging and building effective representations under harsh conditions (e.g., low and/or high illumination, rain, and sparse capture rigs) at varying time/scene/data scales. His research papers appear in premier venues featuring computer vision, graphics, and machine learning (e.g., CVPR/ICCV/SIGGRAPH Asia/NeurIPS).
 
 
 	</font></p>	
