--- a/index.html
+++ b/index.html
@@ -69,10 +69,13 @@ body {
 	<br>
 	
 	
-	<h2>Service</h2>
+	<h2>Service/Award</h2>
 	<hr>
 	<p><font size="3">Program Committee Member: CVPR, ICCV, ECCV, NeurIPS, ICLR, ICML, AAAI</font></p>
 	<p><font size="3">Journal Reviewer: IJCV, TPAMI, TIP, CGF</font></p>
+	<p><font size="3">IJCV Outstanding Reviewer Award <a href="">2024</a></font></p>
+	<p><font size="3">BMVC Best Student Paper Runner-Up Award <a href="https://www.bmvc2020-conference.com/programme/paper-awards/"> 2020</a></font></p>
+	<p><font size="3">NeurIPS Top Reviewer <a href="https://neurips.cc/Conferences/2019/Reviewers">2019</a></font></p>
 	<br>	
 	
 	
@@ -469,7 +472,7 @@ body {
 			<br>
 			<i>Xin Tian, <b>Ke Xu</b>, Xin Yang, Baocai Yin, Rynson Lau</i>
 			<br>
-			<b><i><font color="#770043">Proc. BMVC (Best Student Paper Runner-Up)</font></i></b>, Sept. 2020
+			<b><i><font color="#770043">Proc. BMVC (Oral)</font></i></b>, Sept. 2020
 			<br>
 			[<a href='https://arxiv.org/pdf/2009.13898.pdf'><b>Paper</b></a>|<a href=''><b>Code</b></a>]
 			</td>			
