--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ body {
 	
 	<h2>Service/Award</h2>
 	<hr>
-	<p><font size="3">Program Committee Member: CVPR, ICCV, ECCV, NeurIPS, ICLR, ICML, AAAI</font></p>
+	<p><font size="3">Program Committee Member: CVPR, ICCV, ECCV, NeurIPS, ICLR, ICML, AAAI, SIGGRAPH</font></p>
 	<p><font size="3">Journal Reviewer: IJCV, TPAMI, TIP, CGF</font></p>
 	<p><font size="3">IJCV Outstanding Reviewer Award <a href="">2024</a></font></p>
 	<p><font size="3">BMVC Best Student Paper Runner-Up Award <a href="https://www.bmvc2020-conference.com/programme/paper-awards/"> 2020</a></font></p>
