--- a/index.html
+++ b/index.html
@@ -90,6 +90,42 @@ body {
 
 
 		<tr>
+			<td>
+			<font size="3">Language-Guided Salient Object Ranking
+			<br>
+			<i>Fang Liu, Yuhao Liu, <b>Ke Xu</b>, Shuquan Ye, Gerhard Hancke, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2025
+			<br>
+			[<a href=''><b>Paper</b></a>|<a href=''><b>Code</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
+			<font size="3">GhostingNet: a Novel Approach for Glass Surface Detection with Ghosting Cues
+			<br>
+			<i>Tao Yan, Jiahui Gao, <b>Ke Xu</b>, Xiangjie Zhu, Hao Huang, Helong Li, Benjamin Wah, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">IEEE Trans. on Pattern Analysis and Machine Intelligence (TPAMI)</font></i></b>, 2025
+			<br>
+			[<a href='https://ieeexplore.ieee.org/document/10684046'><b>Paper</b></a>|<a href='https://github.com/YT3DVision/GhostingNet'><b>Code</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
+			<font size="3">APANet: Asymmetrical Parallax Attention Network For Efficient Stereo Image Deraining
+			<br>
+			<i>Chenglong Wang, Tao Yan, Weilong Huang, Xianglong Chen, <b>Ke Xu</b>, Xiaojun Chang</i>
+			<br>
+			<b><i><font color="#770043">IEEE Trans. on Computational Imaging (TCI)</font></i></b>, 2025
+			<br>
+			[<a href='https://ieeexplore.ieee.org/abstract/document/10833832'><b>Paper</b></a>|<a href='https://github.com/YT3DVision/APANet'><b>Code</b></a>]
+			</td>
+		</tr>
+
+		<tr>
       <td>
 			<font size="3">LuSh-NeRF: Lighting up and Sharpening NeRFs for Low-light Scenes
 			<br>
@@ -110,18 +146,6 @@ body {
 			<b><i><font color="#770043">ACM Trans. on Graphics (Proc. ACM SIGGRAPH Asia)</font></i></b>, Dec. 2024
 			<br>
 			[<a href='https://drive.google.com/file/d/1PGigrWCZ0NkxPmBZ9CgUp6ZWgYe71Dhz/view?usp=sharing'><b>Paper</b></a>|<a href=''><b>Code</b></a>|<a href='https://www.youtube.com/watch?v=M4fD3GgjZTI'><b>Video1</b></a>|<a href='https://www.youtube.com/watch?v=MGIlBT_JZNk'><b>Video2</b></a>]
-			</td>
-		</tr>
-
-		<tr>
-			<td>
-			<font size="3">GhostingNet: a Novel Approach for Glass Surface Detection with Ghosting Cues
-			<br>
-			<i>Tao Yan, Jiahui Gao, <b>Ke Xu</b>, Xiangjie Zhu, Hao Huang, Helong Li, Benjamin Wah, Rynson Lau</i>
-			<br>
-			<b><i><font color="#770043">IEEE Trans. on Pattern Analysis and Machine Intelligence (TPAMI)</font></i></b>, 2024
-			<br>
-			[<a href=''><b>Paper</b></a>|<a href='https://github.com/YT3DVision/GhostingNet'><b>Code</b></a>]
 			</td>
 		</tr>
 
@@ -170,7 +194,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. AAAI (Oral)</font></i></b>, Feb. 2024
 			<br>
-			[<a href='https://arxiv.org/pdf/2402.00341.pdf'><b>Paper</b></a>]
+			[<a href='https://arxiv.org/pdf/2402.00341.pdf'><b>Paper</b></a>|<a href='https://github.com/yuhaoliu7456/RRL-Net'><b>Dataset&Results</b></a>]   
 			</td>
 		</tr>
 
