--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ body {
 			<td>
 			<font size="3">Language-Guided Salient Object Ranking
 			<br>
-			<i>Fang Liu, Yuhao Liu, <b>Ke Xu</b>, Shuquan Ye, Gerhard Hancke, Rynson Lau</i>
+			<i>Fang Liu, Yuhao Liu, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Shuquan Ye, Gerhard Hancke, Rynson Lau</i>
 			<br>
 			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2025
 			<br>
