--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@ body {
 	<hr>
 	<tbody>
 
+		<tr>
+      <td>
+			<font size="3">4D Gaussian Video with Motion Layering
+			<br>
+			<i>  Pinxuan Dai, Peiquan Zhang, Zheng Dong, <b>Ke Xu</b>, Yifan Peng, Dandan Ding, Yujun Shen, Yin Yang, Xinguo Liu, Weiwei Xu, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">ACM Trans. on Graphics (Proc. ACM SIGGRAPH, conditionally accepted)</font></i></b>, Aug. 2025
+			<br>
+			[<a href=''><b>Paper</b></a>|<a href=''><b>Code</b></a>]
+			</td>
+		</tr>
 
 		<tr>
 			<td>
