--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ body {
       <td>
 			<font size="3">4D Gaussian Video with Motion Layering
 			<br>
-			<i>  Pinxuan Dai, Peiquan Zhang, Zheng Dong, <b>Ke Xu</b>, Yifan Peng, Dandan Ding, Yujun Shen, Yin Yang, Xinguo Liu, Weiwei Xu, Rynson Lau</i>
+			<i>  Pinxuan Dai, Peiquan Zhang, Zheng Dong, <b>Ke Xu</b>, Yifan Peng, Dandan Ding, Yujun Shen, Yin Yang, Xinguo Liu, Rynson Lau, Weiwei Xu</i>
 			<br>
 			<b><i><font color="#770043">ACM Trans. on Graphics (Proc. ACM SIGGRAPH, conditionally accepted)</font></i></b>, Aug. 2025
 			<br>
