--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2024
 			<br>
-			[<a href='https://openaccess.thecvf.com/content/CVPR2024/papers/Warren_Effective_Video_Mirror_Detection_with_Inconsistent_Motion_Cues_CVPR_2024_paper.pdf'><b>Paper</b></a>|<a href='https://github.com/AlexAnthonyWarren1/MG-VMD'><b>Project</b></a>]
+			[<a href='https://openaccess.thecvf.com/content/CVPR2024/papers/Warren_Effective_Video_Mirror_Detection_with_Inconsistent_Motion_Cues_CVPR_2024_paper.pdf'><b>Paper</b></a>|<a href='https://github.com/AlexAnthonyWarren1/MG-VMD'><b>Project</b></a>|<a href='https://www.youtube.com/watch?v=q18VcqZz5y4&ab_channel=AlexWarren'><b>Video</b></a>]
 			</td>
 		</tr>
 		
