--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ body {
 			<br>
 			<i>  Pinxuan Dai, Peiquan Zhang, Zheng Dong, <b>Ke Xu</b>, Yifan Peng, Dandan Ding, Yujun Shen, Yin Yang, Xinguo Liu, Rynson Lau, Weiwei Xu</i>
 			<br>
-			<b><i><font color="#770043">ACM Trans. on Graphics (Proc. ACM SIGGRAPH, conditionally accepted)</font></i></b>, Aug. 2025
+			<b><i><font color="#770043">ACM Trans. on Graphics (Proc. ACM SIGGRAPH)</font></i></b>, Aug. 2025
 			<br>
 			[<a href=''><b>Paper</b></a>|<a href=''><b>Code</b></a>]
 			</td>
