--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ body {
 			<br>
 			<b><i><font color="#770043">ACM Trans. on Graphics (Proc. ACM SIGGRAPH)</font></i></b>, Aug. 2025
 			<br>
-			[<a href=''><b>Paper</b></a>|<a href=''><b>Code</b></a>]
+			[<a href='https://turandai.github.io/projects/4d_gaussian_video/sig25_4dgv_author.pdf'><b>Paper</b></a>|<a href='https://turandai.github.io/projects/4d_gaussian_video/'><b>Code</b></a>]
 			</td>
 		</tr>
 
@@ -109,7 +109,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2025
 			<br>
-			[<a href=''><b>Paper</b></a>|<a href=''><b>Code</b></a>]
+			[<a href='https://openaccess.thecvf.com/content/CVPR2025/papers/Liu_Language-Guided_Salient_Object_Ranking_CVPR_2025_paper.pdf'><b>Paper</b></a>|<a href=''><b>Code</b></a>]
 			</td>
 		</tr>
 
