--- a/index.html
+++ b/index.html
@@ -91,6 +91,18 @@ body {
 
 		<tr>
       <td>
+			<font size="3">SEHDR: Single-Exposure HDR Novel View Synthesis via 3D Gaussian Bracketing
+			<br>
+			<i>  Yiyu Li, Haoyuan Wang, <b> Ke Xu</b>, Gerhard Hancke, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. IEEE ICCV</font></i></b>, Oct. 2025
+			<br>
+			[<a href=''><b>Paper</b></a>|<a href=''><b>Code</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+      <td>
 			<font size="3">4D Gaussian Video with Motion Layering
 			<br>
 			<i>  Pinxuan Dai, Peiquan Zhang, Zheng Dong, <b>Ke Xu</b>, Yifan Peng, Dandan Ding, Yujun Shen, Yin Yang, Xinguo Liu, Rynson Lau, Weiwei Xu</i>
