--- a/index.html
+++ b/index.html
@@ -47,7 +47,16 @@ body {
 		
 	<table align="center" cellspacing="10">
 	<tr>
-	<td align="center"><img border=0 height=254 width=200 src="kexu.jpg"></td>
+	<td>
+	<style>
+    .circular-image {
+      border-radius: 50%;
+      width: 200px;
+      height: 200px;
+      object-fit: cover;
+    }
+  </style>
+  <img src="kexu.jpg" alt="圆形图片" class="circular-image"></td>
 	<td align="center">
 			<td align="center"><h2>Ke XU</h2>
 			<p><font size=+1>&#35768;  &#21487;</font></p>
@@ -62,7 +71,7 @@ body {
 	
 	<h2>Biography</h2>
 	<hr/>
-	<p><font size="3">Ke XU currently works at the City University of Hong Kong. He obtained a dual PhD in Computer Science from Dalian University of Technology and City University of Hong Kong in 2021. His research interest lies at the intersection of computer vision, computer graphics, and machine learning, where he explores advanced AI techniques to facilitate computers to see, understand, and recreate the richness of content in everyday and professional activities. His work addresses challenges of capture and learning, including imaging and building effective representations under harsh conditions (e.g., low and/or high illumination, rain, and sparse capture rigs) at varying time/scene/data scales. His research papers appear in premier venues featuring computer vision, graphics, and machine learning (e.g., CVPR/ICCV/SIGGRAPH (Asia)/NeurIPS).
+	<p><font size="3">I currently work at the City University of Hong Kong. I obtained a dual PhD in Computer Science from Dalian University of Technology and City University of Hong Kong in 2021. My research interest lies at the intersection of computer vision, computer graphics, and machine learning, where I explore advanced AI techniques to facilitate computers to see, understand, and recreate the richness of content in everyday and professional activities. My work addresses challenges of capture and learning, including imaging and building effective representations under harsh conditions (e.g., low and/or high illumination, rain, and sparse capture rigs) at varying time/scene/data scales. My research papers generally appear in premier venues featuring computer vision, graphics, and machine learning (e.g., CVPR/SIGGRAPH (Asia)/NeurIPS).
 
 
 	</font></p>	
@@ -72,7 +81,7 @@ body {
 	<h2>Service/Award</h2>
 	<hr>
 	<p><font size="3">Conference Reviewer: CVPR, ICCV, ECCV, NeurIPS, ICLR, ICML, AAAI, SIGGRAPH (Asia)</font></p>
-	<p><font size="3">Journal Reviewer: IJCV, TPAMI, TIP, CGF</font></p>
+	<p><font size="3">Journal Reviewer: IJCV, TPAMI, TIP</font></p>
 	<p><font size="3">CVPR Outstanding Reviewer <a href="https://cvpr.thecvf.com/Conferences/2025/ProgramCommittee">2025</a></font></p>
 	<p><font size="3">IJCV Outstanding Reviewer Award <a href="https://link.springer.com/journal/11263/updates/27742690">2024</a></font></p>
 	<p><font size="3">BMVC Best Student Paper Runner-Up Award <a href="https://www.bmvc2020-conference.com/programme/paper-awards/"> 2020</a></font></p>
@@ -83,11 +92,37 @@ body {
 	<h2>Selected Publications&nbsp
 	<a href="https://scholar.google.com/citations?hl=en&user=2meBhbQAAAAJ"><strong>[Google Scholar]</strong></a>
 <a href="https://dblp.org/pid/181/2626-10"><strong>[DBLP]</strong></a>
-<a href="https://orcid.org/0000-0001-5855-3810"><strong>[ORCID]</strong></a></h2>
+<a href="https://orcid.org/0000-0001-5855-3810"><strong>[ORCID]</strong></a>
+<a href="https://openreview.net/profile?id=%7EKe_Xu5"><strong>[OpenReview]</strong></a>
+</h2>
 	
 	<table class="numbertable" cellspacing="10">
 	<hr>
 	<tbody>
+
+		<tr>
+      <td>
+			<font size="3">HRC-Net: Learning Visual Hypothesis, Representative, and Collaboration for Multi-Domain Image Inpainting
+			<br>
+			<i>  Xin Wang, Di Lin, Wanchao Su, Ji Du, Renjie Zhang, Jie Zhang, Haotian Dong, <b>Ke Xu</b>, Qing Guo, Ping Li</i>
+			<br>
+			<b><i><font color="#770043">ACM Trans. on Graphics (Proc. ACM SIGGRAPH Asia, conditionally accepted)</font></i></b>, Dec. 2025
+			<br>
+			[<a href=''><b>Paper</b></a>|<a href=''><b>Code</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+      <td>
+			<font size="3">StyleSculptor: Zero-Shot Stylized 3D Asset Generation with Texture-Geometry Dual Guidance
+			<br>
+			<i>  Zefan Qu, Zhenwei Wang, Haoyuan Wang, <b>Ke Xu</b>, Gerhard Hancke, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. ACM SIGGRAPH Asia (conditionally accepted)</font></i></b>, Dec. 2025
+			<br>
+			[<a href=''><b>Paper</b></a>|<a href=''><b>Code</b></a>]
+			</td>
+		</tr>
 
 		<tr>
       <td>
