--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. ACM SIGGRAPH Asia (conditionally accepted)</font></i></b>, Dec. 2025
 			<br>
-			[<a href=''><b>Paper</b></a>|<a href=''><b>Code</b></a>]
+			[<a href=''><b>Paper</b></a>|<a href='https://stylesculptor.github.io/'><b>Code</b></a>]
 			</td>
 		</tr>
 
