--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@ body {
 			<td>
 			<div class="publication-row">
           <div class="teaser-container">
-            <img src="teaser/cvpr20_Lowlight.png" alt="Lowlight Teaser" class="teaser-image">
+            <img src="teaser/cvpr20_lowlight.png" alt="Lowlight Teaser" class="teaser-image">
           </div>
 			<font size="3">Learning to Restore Low-Light Images via Decomposition-and-Enhancement
 			<br>
