--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ body {
             <img src="teaser/siga25_styleSculptor.png" alt="StyleSculptor Teaser" class="teaser-image">
           </div>
           <div class="publication-content">
-			<font size="3">StyleSculptor: Zero-Shot Stylized 3D Asset Generation with Texture-Geometry Dual Guidance
+			<font size="3">StyleSculptor: Zero-Shot Style-Controllable 3D Asset Generation with Texture-Geometry Dual Guidance
 			<br>
 			<i>  Zefan Qu, Zhenwei Wang, Haoyuan Wang, <b>Ke Xu</b>, Gerhard Hancke, Rynson Lau</i>
 			<br>
