--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE ICCV</font></i></b>, Oct. 2025
 			<br>
-			[<a href=''><b>Paper</b></a>|<a href=''><b>Code</b></a>]
+			[<a href='https://arxiv.org/pdf/2509.20400'><b>Paper</b></a>|<a href='https://github.com/yiyulics/SeHDR'><b>Code</b></a>]
 		</div>
 		</div>
 			</td>
