--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@ body {
 	<hr>
 	<p><font size="3">Conference Reviewer: CVPR, ICCV, ECCV, NeurIPS, ICLR, ICML, AAAI, SIGGRAPH (Asia)</font></p>
 	<p><font size="3">Journal Reviewer: IJCV, TPAMI, TIP</font></p>
+	<p><font size="3">NeurIPS Top Reviewer <a href="https://neurips.cc/Conferences/2019/Reviewers">2019</a>, <a href="">2025</a></font></p>
 	<p><font size="3">CVPR Outstanding Reviewer <a href="https://cvpr.thecvf.com/Conferences/2025/ProgramCommittee">2025</a></font></p>
 	<p><font size="3">IJCV Outstanding Reviewer Award <a href="https://link.springer.com/journal/11263/updates/27742690">2024</a></font></p>
 	<p><font size="3">BMVC Best Student Paper Runner-Up Award <a href="https://www.bmvc2020-conference.com/programme/paper-awards/"> 2020</a></font></p>
-	<p><font size="3">NeurIPS Top Reviewer <a href="https://neurips.cc/Conferences/2019/Reviewers">2019</a></font></p>
 	<br>	
 	
 	
@@ -161,7 +161,7 @@ body {
 			<br>
 			<i>  Xin Wang, Di Lin, Wanchao Su, Ji Du, Renjie Zhang, Jie Zhang, Haotian Dong, <b>Ke Xu</b>, Qing Guo, Ping Li</i>
 			<br>
-			<b><i><font color="#770043">ACM Trans. on Graphics (Proc. ACM SIGGRAPH Asia, conditionally accepted)</font></i></b>, Dec. 2025
+			<b><i><font color="#770043">ACM Trans. on Graphics (Proc. ACM SIGGRAPH Asia)</font></i></b>, Dec. 2025
 			<br>
 			[<a href=''><b>Paper</b></a>|<a href=''><b>Code</b></a>]
           </div>
@@ -180,7 +180,7 @@ body {
 			<br>
 			<i>  Zefan Qu, Zhenwei Wang, Haoyuan Wang, <b>Ke Xu</b>, Gerhard Hancke, Rynson Lau</i>
 			<br>
-			<b><i><font color="#770043">Proc. ACM SIGGRAPH Asia (conditionally accepted)</font></i></b>, Dec. 2025
+			<b><i><font color="#770043">Proc. ACM SIGGRAPH Asia</font></i></b>, Dec. 2025
 			<br>
 			[<a href='https://arxiv.org/pdf/2509.13301'><b>Paper</b></a>|<a href='https://stylesculptor.github.io/'><b>Code</b></a>]
 			</td>
