--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ body {
 	<hr>
 	<p><font size="3">Conference Reviewer: CVPR, ICCV, ECCV, NeurIPS, ICLR, ICML, AAAI, SIGGRAPH (Asia)</font></p>
 	<p><font size="3">Journal Reviewer: IJCV, TPAMI, TIP</font></p>
-	<p><font size="3">NeurIPS Top Reviewer <a href="https://neurips.cc/Conferences/2019/Reviewers">2019</a>, <a href="">2025</a></font></p>
+	<p><font size="3">NeurIPS Top Reviewer <a href="https://neurips.cc/Conferences/2019/Reviewers">2019</a>, <a href="https://neurips.cc/Conferences/2025/ProgramCommittee">2025</a></font></p>
 	<p><font size="3">CVPR Outstanding Reviewer <a href="https://cvpr.thecvf.com/Conferences/2025/ProgramCommittee">2025</a></font></p>
 	<p><font size="3">IJCV Outstanding Reviewer Award <a href="https://link.springer.com/journal/11263/updates/27742690">2024</a></font></p>
 	<p><font size="3">BMVC Best Student Paper Runner-Up Award <a href="https://www.bmvc2020-conference.com/programme/paper-awards/"> 2020</a></font></p>
