--- a/index.html
+++ b/index.html
@@ -149,6 +149,24 @@ body {
 	<hr>
 	<tbody>
 
+		<tr>
+      <td>
+        <div class="publication-row">
+          <div class="teaser-container">
+            <img src="teaser/" alt="MiD Teaser" class="teaser-image">
+          </div>
+          <div class="publication-content">
+			<font size="3">Video Mirror Detection with the Motion-in-Depth Cue
+			<br>
+			<i>  Alex Warren, <b>Ke Xu</b>, Xin Tian, Gary Tam, Benjamin Wah, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. AAAI</font></i></b>, Jan. 2026 <b><font color="#E3371E">(Oral Presentation)</font></b>
+			<br>
+			[<a href=''><b>Paper Coming Soon</b></a>|<a href=''><b>Code</b></a>]
+          </div>
+        </div>
+			</td>
+		</tr>
 
 		<tr>
       <td>
@@ -163,7 +181,7 @@ body {
 			<br>
 			<b><i><font color="#770043">ACM Trans. on Graphics (Proc. ACM SIGGRAPH Asia)</font></i></b>, Dec. 2025
 			<br>
-			[<a href=''><b>Paper</b></a>|<a href=''><b>Code</b></a>]
+			[<a href=''><b>Paper Coming Soon</b></a>|<a href=''><b>Code</b></a>]
           </div>
         </div>
 			</td>
@@ -381,7 +399,7 @@ body {
 			<br>
 			<i> Yuhao Liu, Zhanghan Ke, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Fang Liu, Zhenwei Wang, Rynson Lau</i>
 			<br>
-			<b><i><font color="#770043">Proc. AAAI (Oral)</font></i></b>, Feb. 2024
+			<b><i><font color="#770043">Proc. AAAI</font></i></b>, Feb. 2024 <b><font color="#E3371E">(Oral Presentation)</font></b>
 			<br>
 			[<a href='https://arxiv.org/pdf/2402.00341.pdf'><b>Paper</b></a>|<a href='https://github.com/yuhaoliu7456/RRL-Net'><b>Dataset&Results</b></a>]
 			</div></div>   
@@ -583,7 +601,7 @@ body {
 			<br>
 			<i>Zheng Dong, <b>Ke Xu</b>, Ziheng Duan, Hujun Bao, Weiwei Xu, Rynson Lau</i>
 			<br>
-			<b><i><font color="#770043">Proc. NeurIPS (Spotlight)</font></i></b>, Nov. 2022
+			<b><i><font color="#770043">Proc. NeurIPS</font></i></b>, Nov. 2022 <b><font color="#E3371E">(Spotlight Presentation)</font></b>
 			<br>
 			[<a href='https://arxiv.org/pdf/2112.02082.pdf'><b>Paper</b></a>|<a href='https://sites.google.com/view/twoscale'><b>Project</b></a>]
 			</div></div>
@@ -601,7 +619,7 @@ body {
 			<br>
 			<i>Jiayu Sun, Zhanghan Ke, <b>Ke Xu</b>, Guofeng Zhang, Lihe Zhang, Huchuan Lu, Rynson Lau</i>
 			<br>
-			<b><i><font color="#770043">Proc. BMVC (Oral)</font></i></b>, Nov. 2022
+			<b><i><font color="#770043">Proc. BMVC</font></i></b>, Nov. 2022 <b><font color="#E3371E">(Oral Presentation)</font></b>
 			<br>
 			[<a href='https://bmvc2022.mpi-inf.mpg.de/0592.pdf'><b>Paper</b></a>|<a href=''><b>Code</b></a>]
 		</div></div>
@@ -837,7 +855,7 @@ body {
 			<br>
 			<i>Xin Tian, <b>Ke Xu</b>, Xin Yang, Baocai Yin, Rynson Lau</i>
 			<br>
-			<b><i><font color="#770043">Proc. BMVC (Best Student Paper Runner-Up)</font></i></b>, Sept. 2020
+			<b><i><font color="#770043">Proc. BMVC</font></i></b>, Sept. 2020 <b><font color="#E3371E">(Best Student Paper Runner-Up)</font></b>
 			<br>
 			[<a href='https://arxiv.org/pdf/2009.13898.pdf'><b>Paper</b></a>|<a href=''><b>Code</b></a>]
 			</div></div>
