--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ body {
       <td>
         <div class="publication-row">
           <div class="teaser-container">
-            <img src="teaser/temp.png" alt="MiD Teaser" class="teaser-image">
+            <img src="teaser/aaai26_midvmd.png" alt="MiD Teaser" class="teaser-image">
           </div>
           <div class="publication-content">
 			<font size="3">Video Mirror Detection with the Motion-in-Depth Cue
